--- a/truck_parts_app/templates/truck_parts_app/basic.html
+++ b/truck_parts_app/templates/truck_parts_app/basic.html
@@ -9,69 +9,53 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="{% url 'truck_parts_app:index' %}">Main</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="card" id="global div">
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'truck_parts_app:products-list' %}">Our products <span class="sr-only">(current)</span></a>
-            </li>
+        <nav class="navbar navbar-dark bg-primary">
+            <a class="navbar-brand" href="{% url 'truck_parts_app:index' %}">Main</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'truck_parts_app:products-list' %}">Our products</a>
+                </li>
 
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
+            </ul>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
 
-<div class="container-fluid">
-    <div class="row">
+        <div class="container-fluid">
+            <div class="row">
 
-        {#        <nav class="col-md-2 d-none d-md-block bg-primary sidebar">#}
-        {#            <div class="sidebar-sticky">#}
-        {#                <ul class="nav flex-column">#}
-        {##}
-        {#                    {% block left_side_bar %}#}
-        {##}
-        {#                    {% endblock %}#}
-        {##}
-        {#                </ul>#}
-        {#            </div>#}
-        {#        </nav>#}
-
-        {#            </div>#}
-        {#        </div>#}
-
-        <div>
-            <div class="card text-center">
-                <div class="card-body">
-                    <h5 class="card-title">Trucks:</h5>
-                    <p class="card-text">
-                        {% block left_side_bar %}
-                        {% endblock %}
-                    </p>
+                <div class="card text-center col-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Trucks:</h5>
+                        <p class="card-text">
+                            {% block left_side_bar %}
+                            {% endblock %}
+                        </p>
+                    </div>
                 </div>
+
+
+                <div class="card text col-10">
+                    <div class="card-body">
+                        <h2 class="card-title">{% block header %} Welcome to our website!{% endblock %}</h2>
+                        <p class="card-text">{% block content %}{% endblock %}</p>
+                    </div>
+                </div>
+
             </div>
         </div>
 
-
-        <div>
-            <div class="card">
-                <div class="card-body">
-                    <h2 class="card-title">{% block header %} Welcome to our website!{% endblock %}</h2>
-                    <p class="card-text">{% block content %}{% endblock %}</p>
-                </div>
+        <footer>
+            <div class="pt-lg-5">
+                <a href="" type="button" class="btn btn-primary btn-lg btn-block">Contuct us</a>
             </div>
-        </div>
+        </footer>
 
     </div>
 </div>
-
 </body>
 </html>
