--- a/truck_parts_app/templates/truck_parts_app/detail.html
+++ b/truck_parts_app/templates/truck_parts_app/detail.html
@@ -7,3 +7,10 @@
 {% block content %}
     <p> {{ product.description }}</p>
 {% endblock %}
+
+{#{% block left_side_bar %}#}
+{#    {% for truck in list_of_trucks %}#}
+{#        <a class="nav-link" href="#">{{ truck.name }}</a>#}
+{#    {% endfor %}#}
+{##}
+{#{% endblock %}#}
