--- a/truck_parts_app/templates/truck_parts_app/basic.html
+++ b/truck_parts_app/templates/truck_parts_app/basic.html
@@ -19,10 +19,15 @@
                 </li>
 
             </ul>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            <form method="GET" class="form-inline">
+                <input type="text" name='q' value='{{ request.GET.q }}' class="form-control mr-sm-2">
+                <input class="btn btn-secondary my-2 my-sm-0" type="submit" value="Search">
             </form>
+
+{#            <form method='GET'>#}
+{#  <input type='text' name='q' value='{{ request.GET.q }}'>#}
+{#  <input class="button" type='submit' value="Search Profile">#}
+{#</form>#}
         </nav>
 
         <div class="container-fluid">
