--- a/truck_parts_app/templates/truck_parts_app/truck-confirm-delete.html
+++ b/truck_parts_app/templates/truck_parts_app/truck-confirm-delete.html
@@ -2,14 +2,14 @@
 
 {% load crispy_forms_tags %}
 
-{% block header %} Are you sure you want delete {{ product.name }}? {% endblock %}
+{% block header %} Are you sure you want delete {{ truck.name }}? {% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary btn-md" style="float: start;">Confirm</button>
-        <a class="btn btn-primary btn-md" href="{% url 'truck_parts_app:product-detail-form' product.id %}"
+        <a class="btn btn-primary btn-md" href="{% url 'truck_parts_app:truck-detail-form' truck.id %}"
            role="button" style="float: right;">Cancel</a>
     </form>
 
