--- a/truck_parts_app/templates/truck_parts_app/truck-update-form.html
+++ b/truck_parts_app/templates/truck_parts_app/truck-update-form.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block header %} Create a new truck: {% endblock %}
+{% block header %} Change your truck info: {% endblock %}
 
 {% block content %}
     {% crispy form %}
